# myclib

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: codacy.yml  codeql.yml  msvc.yml
array/: array.c  array.h
include/: boolmyclib.h  compat.h  myclib.h  utilmyclib.h
lists/: CMakeLists.txt
lists/singly/: singlylinkedlist.c  singlylinkedlist.h  sl_list.c  sl_list.h  sll.c  sll.h
queues/priorityqueue/: pqueue.c  pqueue.h
random/: CMakeLists.txt  random.c  random.h
stack/: CMakeLists.txt  example.c  stack.c  stack.h
str/: CMakeLists.txt  str.c  str.h  str_.h
strext/: strext.c  strext.h
tests/: CMakeLists.txt  framework.c  framework.h  main.c  tests.c  tests.h
tests/stack/: stacktest.c  stacktest.h
tests/stacktests/: stacktests.c  stacktests.h
tests/strtests/: strtests.c  strtests.h
tests/teststack/: teststack.c  teststack.h
tests/vectortests/: vectortests.c  vectortests.h
trees/: CMakeLists.txt  trees.h
trees/binarytree/: binarytree.c  binarytree.h
vector/: CMakeLists.txt  vector.c  vector.h
